--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/mdi-2019/JOUNEAUX_KAOUANE/issues"
   },
-  "homepage": "https://github.com/mdi-2019/JOUNEAUX_KAOUANE#readme"
+  "homepage": "https://github.com/mdi-2019/JOUNEAUX_KAOUANE#readme",
+  "dependencies": {
+    "mathjs": "^5.4.2",
+    "util": "^0.11.1"
+  }
 }
