--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/mdi-2019/JOUNEAUX_KAOUANE#readme",
   "dependencies": {
     "mathjs": "^5.4.2",
+    "readline": "^1.3.0",
     "util": "^0.11.1"
   }
 }
